Changes required to support higher Java versions